--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <body>
 
     <section>
-        <h1>well come</h1>
+        <h1>Avatar</h1>
         <div class="centerdiv">
             <div class="details">
                 <label> enter your name</label>
@@ -42,7 +42,7 @@
             <div class="imagediv">
                 <img src="image.jpg" height="150vh" alt="" class="imgchange">
             </div>
-            <button>click me</button>
+            <button>Get Your Avatar</button>
         </div>
     </section>
 
